CB-3331 Refactor Stack related queries, Resource fetching